--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
             <version>1.4</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc14</artifactId>
-            <version>10.2.0.4.0</version>
+            <groupId>com.hynnet</groupId>
+            <artifactId>oracle-driver-ojdbc6</artifactId>
+            <version>12.1.0.1</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
