修改了在调用前面的环境时候会导致后面的环境不能执行的问题，同时修改了默认配置文件中的数据库地址，指定了端口号

--- a/src/main/resources/configTemplate.properties
+++ b/src/main/resources/configTemplate.properties
@@ -1,11 +1,11 @@
 #please fill in the blanks, if some of the environment's values are null ,that means these enviroment will not be execute.
 #database info
 #dev
-dataBase.dev.url=192.168.0.57:1521/sinodb
+dataBase.dev.url=10.0.75.223:1521/testdb
 dataBase.dev.userName=sinosoft
 dataBase.dev.pswd=sinosoft
 #test
-dataBase.test.url=192.168.0.59/testdb
+dataBase.test.url=192.168.0.59:1521/testdb
 dataBase.test.userName=fwsb
 dataBase.test.pswd=fwsb
 #uat
