配置文件模板中增加了app.login.userName和app.login.userPassword，由于开发人员不知道生产环境大F管理员密码，需要使用者自行填写。升级版本到1.3

--- a/src/main/resources/configTemplate.properties
+++ b/src/main/resources/configTemplate.properties
@@ -34,6 +34,15 @@ app.login.URL.dev=http://localhost:8080/mis/base/loginSub.action
 app.login.URL.test=http://192.168.0.112/fwst/base/loginSub.action
 app.login.URL.uat=http://192.168.0.111/fwsu/base/loginSub.action
 app.login.URL.pro=http://192.168.0.105/fws/base/loginSub.action
+#config login userName and userPassword
+app.login.userName.dev=fesco
+app.login.userPassword.dev=78e4a3c34ae6feac093ae13cb75a25f3
+app.login.userName.test=fesco
+app.login.userPassword.test=78e4a3c34ae6feac093ae13cb75a25f3
+app.login.userName.uat=fesco
+app.login.userPassword.uat=78e4a3c34ae6feac093ae13cb75a25f3
+app.login.userName.pro=fesco
+app.login.userPassword.pro=
 #select role url
 app.selectRole.URL.dev=http://localhost:8080/mis/base/loginToMain.action
 app.selectRole.URL.test=
