修改一个空指针问题

--- a/src/main/resources/configTemplate.properties
+++ b/src/main/resources/configTemplate.properties
@@ -42,7 +42,7 @@ app.login.userPassword.test=78e4a3c34ae6feac093ae13cb75a25f3
 app.login.userName.uat=fesco
 app.login.userPassword.uat=78e4a3c34ae6feac093ae13cb75a25f3
 app.login.userName.pro=fesco
-app.login.userPassword.pro=
+app.login.userPassword.pro=c4ca823dc9a9941052070624b7311228
 #select role url
 app.selectRole.URL.dev=http://localhost:8080/mis/base/loginToMain.action
 app.selectRole.URL.test=
